--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "id": "doc",
   "version": "0.0.1",
   "description": "Runtime documentation tool for REPL",
-  "keywords": [  ],
+  "keywords": [ "runtime", "documentation", "docs", "repl" ],
   "author": "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)",
   "homepage": "https://github.com/Gozala/doc",
   "repository": {
@@ -14,20 +14,7 @@
   "bugs": {
     "web": "http://github.com/Gozala/doc/issues/"
   },
-  "devDependencies": {
-    "test": ">=0.0.10"
-  },
-  "dependencies": {
-    "graphquire": ">=0.6.1"
-  },
   "main": "./index.js",
-  "engines": {
-    "node": "0.4.x"
-  },
-  "scripts": {
-    "test": "node tests/test-all.js",
-    "install": "graphquire --clean --write"
-  },
   "licenses": [{
     "type" : "MIT",
     "url" : "http://jeditoolkit.com/LICENSE"
